docker file updated